--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Simple JS App</title>
   </head>
   <body>
+    <div>
+      <img
+        src="img/pokemon_logo.png"
+        alt="A picture of pokemon logo"
+        class="pokemon_logo"
+      />
+    </div>
     <script src="js/scripts.js"></script>
   </body>
 </html>
