--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         class="pokemon_logo"
       />
     </div>
+    <ul class="pokemon-list"></ul>
     <script src="js/scripts.js"></script>
   </body>
 </html>
