--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <div>
+      <nav>
       <img
         src="img/pokemon_logo.png"
         alt="A picture of pokemon logo"
         class="pokemon_logo"
       />
     </div>
+  </nav>
     <ul class="pokemon-list"></ul>
     <script src="js/scripts.js"></script>
   </body>
