--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </div>
   </nav>
     <ul class="pokemon-list"></ul>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
