--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Simple JS App</title>
   </head>
   <body>
+    <header>
     <div>
       <nav>
       <img
@@ -16,8 +17,15 @@
         class="pokemon_logo"
       />
     </div>
+    </header>
   </nav>
-    <ul class="pokemon-list"></ul>
+    <div class="container">
+      <ul class="pokemon-list"></ul>
+    </div>
+
+    <div id="modal-container">
+      <div class="modal"></div>
+    </div>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
