Added a pokemon favicon and changed the title inside index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Simple JS App</title>
+    <link rel="shortcut icon" type="img/png" href="img/pokemon.png" />
+    <title>Mann's Pokedex App</title>
   </head>
   <body>
     <header>
