--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <div id="modal-container">
       <div class="modal"></div>
     </div>
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
