added a search bar which searches for the right pokemon inside the input bar

--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
   </head>
   <body>
     <header>
-      <nav class="navbar fixed-top my-navbar">
-        <a class="navbar-brand" href="#">
+      <nav class="navbar my-navbar">
+        <a class="navbar-brand pokemon_logo" href="#">
           <img
             src="img/pokemon_logo.png"
             alt="A picture of pokemon logo"
             class="pokemon_logo"
           />
         </a>
+        <!--Search bar-->
         <div class="search-box">
           <input
-            id="searchIn"
+            id="search-bar"
             class="search-txt"
             type="text"
             name=""
