--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="dist/styles.min.css" />
     <script
       src="https://kit.fontawesome.com/eaaed38ce7.js"
       crossorigin="anonymous"
@@ -91,8 +91,8 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
     <!-- Optional Javascript-->
-    <script src="js/promise-polyfill.js"></script>
-    <script src="js/fetch-polyfill.js"></script>
+    <script src="dist/promise-polyfill.min.js"></script>
+    <script src="dist/fetch-polyfill.min.js"></script>
 
     <!-- jQuery first, then popper.js, then Bootstrap JS-->
     <script
@@ -110,6 +110,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script src="js/scripts.js"></script>
+    <script src="dist/scripts.min.js"></script>
   </body>
 </html>
